analysis/low-level-api-fir/testData/lazyResolve/errors/functionDuplicatedContextParameter.kt
// LANGUAGE: +ContextParameters

context(c<caret>: Int)
context(c: String)
fun foo() {}